simulation launched again for bending non damaged

--- a/Documents/Report/ChromatinArchitecturePostUVCDamage.tex
+++ b/Documents/Report/ChromatinArchitecturePostUVCDamage.tex
@@ -271,7 +271,7 @@
 	
 	\subsection{Assign bending to non-damaged monomers}
 		
-		The result of the previous subsection brought us to believe that the expansion should not occur in the affected monomers but rather in the non-affected ones. The 20\% loos in DNA density should be attributed to the non damaged monomers. The damaged DNA repains within the repair zone, whereas non damaged DNA is pushed aside by the repair mechanism. Following this scenario, the simulation now captures the following process:
+		The result of the previous subsection brought us to believe that the expansion should not occur in the affected monomers but rather in the non-affected ones. The 20\% lose in DNA density should be attributed to the non-damaged monomers. The damaged DNA remains within the repair zone, whereas non-damaged DNA is pushed aside by the repair mechanism. Following this scenario, the simulation now captures the following process:
 		\begin{enumerate}
 			\item cross-linked polymer is being shot by UVC;
 			\item cross-links to and from the damaged monomers are released;
