--- a/Documents/Report/ChromatinArchitecturePostUVCDamage.tex
+++ b/Documents/Report/ChromatinArchitecturePostUVCDamage.tex
@@ -292,18 +292,31 @@
 	\end{figure}
 	     
 	In terms of the number and percentage of monomers lose from ROI, we have:
-	\begin{figure}
+	\begin{figure}[H]
 	\includegraphics[width=0.5\linewidth, height=0.3\textheight]{Images/expandNonDamaged/BreakAffectedCrosslinks/04/MeanNumMonomersInROI}
 	\includegraphics[width=0.5\linewidth, height=0.3\textheight]{Images/expandNonDamaged/BreakAffectedCrosslinks/04/percentOfMonomersInROI}
 	\caption{\tiny{\textbf{The number of monomers in the ROI (left) with time and the overall percentage in comparison to the Recordign phase. As can be seen a loos of 20\% monomers from the ROI can be obtained with 80-100\% connectivity  (500 monomers, expanding non-affected, non Lennard-Jones)}}}
 	\label{fig:MeanNumMonomersInROI}
 	\end{figure}
 	     For 80-100\% connectivity we can gain loss of 20\% monomers from the ROI. We now turn to explore more in-depth the parameters around 80\% connectivity. 
-	     
-	     
+	     										
+		\begin{figure}[H]
+		\includegraphics[width=0.5\linewidth, height=0.3\textheight]{Images/expandNonDamaged/BreakAffectedCrosslinks/05/meanRadiusOfExpansionAffected}
+	    \includegraphics[width=0.5\linewidth,
+		height=0.3\textheight]{Images/expandNonDamaged/BreakAffectedCrosslinks/05/meanRadiusOfExpansionNonAffected}
+		\caption{}
+		\label{fig:meanRadiusOfExpansionAffected}
+		\end{figure}
+		
 			
-			
-			
+		\begin{figure}[H]
+		\includegraphics[width=0.5\linewidth, height=0.3\textheight]{Images/expandNonDamaged/BreakAffectedCrosslinks/05/meanNumMonomersInROI}
+		\includegraphics[width=0.5\linewidth, height=0.3\textheight]{Images/expandNonDamaged/BreakAffectedCrosslinks/05/percentageOfMonomersInROI}
+		\caption{}		
+		\label{fig:percentageOfMonomersInROI}
+		\end{figure}
+		
+		
 			
 	\subsubsection{Keep all cross-links}
 			
